is passed (as opposed to only running tests if a flag is passed).
* Added functions to the commit script for better organziation as well as a
check for syncing Google code to SourceForge.
* Removed exit code 1s from python script for convenience of use/parsing by
other scripts.
* Removed extraneous trailing slash from scp command.
* Updated sync script to remove gzip file when done.

2008.03.12

* Added scripts for creating a local mirror and syncing that mirror from
google.
* Removed extraneous slashes from scripts.
* Added more variables for use by other scripts (and changed some values for
testing purposes).
* Added more scripts for 1) uploading to SF.net, 2) automating the
form-processing, and 3) controlling the whole process.

2008.03.01

* Started getting the rest of the tests ready.

2008.02.29

* Added a print statement to the generate script.
* Moved Elements.TAB, .LINE and .RawCode into document.base.
* Moved Elements.Text and .Inline into document.character.
* Updated Renderer with these changes.
* Added a paragraph test.
* Moved character functions out of Elements and into document.character.
* Moved character test out of paragraphs tests.
* Added last paragraph test.
* First-run clean-up of the character tests.
* Added the charater tests.
* Made some initial changes to the table tests.

2008.02.28

* Added a stubbed script for the generation of test RTF docs.
* Created a place in test/sources for test RTF docs.
* Made changes to test_all so that it can be imported by other scripts.
* Made generalizations to test_all, reducing redundancy and increasing
usability/reusablity.
* Generated and checked the first reference RTF file.
* Had to move Paragraph class into new API to avoid circular imports.
* Renamed all *PS variables to *PropertySet and removed the short names.
* Added two more test reference RTF files.
* Updated section unit tests.
* Removed Paragraph from Elements.
* Added the next reference RTF file and finished up the last section test.